Update actions workflow

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,37 +10,29 @@ jobs:
         with:
           fetch-depth: ‘2’
         id: checkout_code
-      
-       - name: Setup MSBuild and add to PATH
-         uses: microsoft/setup-msbuild@v1.0.0
-         id: setup_msbuild
-        
-       - name: Run MSBuild
-         id: run_msbuild
-         working-directory: $
-         run: msbuild .\HelloWorld.sln
-        
-       - name: Setup VSTest and add to PATH
-         uses: darenm/Setup-VSTest@v1
-         id: setup_vstest
-
-       - name: Download OpenCppCoverage
-         id: download-cov-installation
-         uses: suisei-cn/actions-download-file@v1
-         with:
-           url: "https://github.com/OpenCppCoverage/OpenCppCoverage/releases/download/release-0.9.9.0/OpenCppCoverageSetup-x64-0.9.9.0.exe"
-           target: public/
-       
-       - name: Install OpenCppCoverage
-         id: install-cppcov
-         working-directory: $\public
-         run: OpenCppCoverageSetup-x64-0.9.9.0.exe
-    
+      - name: Setup MSBuild and add to PATH
+        uses: microsoft/setup-msbuild@v1.0.0
+        id: setup_msbuild
+      - name: Run MSBuild
+        id: run_msbuild
+        working-directory: $
+        run: msbuild .\HelloWorld.sln
+      - name: Setup VSTest and add to PATH
+        uses: darenm/Setup-VSTest@v1
+        id: setup_vstest
+      - name: Download OpenCppCoverage
+        id: setup_opencppcoverage1
+        uses: suisei-cn/actions-download-file@v1
+        with:
+          url: "https://github.com/OpenCppCoverage/OpenCppCoverage/releases/download/release-0.9.9.0/OpenCppCoverageSetup-x64-0.9.9.0.exe"
+          target: public/
+      - name: Install OpenCppCoverage
+        id: setup_opencppcoverage2
+        working-directory: $\public
+        run: OpenCppCoverageSetup-x64-0.9.9.0.exe
       - name: Generate Report
         id: gen_test_report
         working-directory: $\Debug\
         run: OpenCppCoverage --sources BitOps -- "vstest.console.exe" OpsTest.dll
-      
-    - name: Upload Coverage to Codecov
-      uses: codecov/codecov-action@v1
-      with:
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v1
