Update working directory

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,7 +15,7 @@ jobs:
         id: setup_msbuild
       - name: Run MSBuild
         id: run_msbuild
-        working-directory: $
+        working-directory: $GITHUB_WORKSPACE
         run: msbuild .\HelloWorld.sln
       - name: Setup VSTest and add to PATH
         uses: darenm/Setup-VSTest@v1
@@ -25,14 +25,14 @@ jobs:
         uses: suisei-cn/actions-download-file@v1
         with:
           url: "https://github.com/OpenCppCoverage/OpenCppCoverage/releases/download/release-0.9.9.0/OpenCppCoverageSetup-x64-0.9.9.0.exe"
-          target: public/
+          target: $GITHUB_WORKSPACE
       - name: Install OpenCppCoverage
         id: setup_opencppcoverage2
-        working-directory: $\public
+        working-directory: $GITHUB_WORKSPACE
         run: OpenCppCoverageSetup-x64-0.9.9.0.exe
       - name: Generate Report
         id: gen_test_report
-        working-directory: $\Debug\
+        working-directory: $GITHUB_WORKSPACE\Debug\
         run: OpenCppCoverage --sources BitOps -- "vstest.console.exe" OpsTest.dll
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v1
