--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,7 @@ jobs:
     name: Build, Test , Upload Code Coverage Report
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2.1.0
+        uses: actions/checkout@v2
         with:
           fetch-depth: ‘2’
         id: checkout_code
@@ -16,7 +16,7 @@ jobs:
       - name: Run MSBuild
         id: run_msbuild
         working-directory: $GITHUB_WORKSPACE
-        run: msbuild .\HelloWorld.sln
+        run: msbuild HelloWorld.sln
       - name: Setup VSTest and add to PATH
         uses: darenm/Setup-VSTest@v1
         id: setup_vstest
