--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,14 +19,10 @@ jobs:
       - name: Setup VSTest and add to PATH
         uses: darenm/Setup-VSTest@v1
         id: setup_vstest
-      - name: Download OpenCppCoverage
-        id: setup_opencppcoverage1
-        run:  curl -L https://github.com/OpenCppCoverage/OpenCppCoverage/releases/download/release-0.9.9.0/OpenCppCoverageSetup-x64-0.9.9.0.exe --output OpenCppCoverageSetup-x64-0.9.9.0.exe
-      - name: Install OpenCppCoverage
-        id: setup_opencppcoverage2
-        run: OpenCppCoverageSetup-x64-0.9.9.0.exe
       - name: Generate Report
         id: gen_test_report
-        run: OpenCppCoverage --sources BitOps -- "vstest.console.exe" Debug\OpsTest.dll
+        run: |
+        choco install opencppcoverage
+        OpenCppCoverage --sources BitOps -- "vstest.console.exe" Debug\OpsTest.dll
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v1
