--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,10 +19,11 @@ jobs:
       - name: Setup VSTest and add to PATH
         uses: darenm/Setup-VSTest@v1
         id: setup_vstest
+      - name: Setup OpenCppCoverage
+        id: setup_opencppcoverage
+        run: choco install opencppcoverage
       - name: Generate Report
         id: gen_test_report
-        run: |
-          choco install opencppcoverage
-          OpenCppCoverage --sources BitOps -- "vstest.console.exe" Debug\OpsTest.dll
+        run: OpenCppCoverage --sources BitOps -- "vstest.console.exe" Debug\OpsTest.dll
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v1
