--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,11 +19,11 @@ jobs:
       - name: Setup VSTest and add to PATH
         uses: darenm/Setup-VSTest@v1
         id: setup_vstest
-      - name: Setup OpenCppCoverage
+      - name: Setup OpenCppCoverage and add to PATh
         id: setup_opencppcoverage
-        run: choco install opencppcoverage
+        run: choco install opencppcoverage && RefreshEnv.cmd
       - name: Generate Report
-        id: gen_test_report
-        run: OpenCppCoverage --sources BitOps -- "vstest.console.exe" Debug\OpsTest.dll
+        id: generate_test_report
+        run: opencppcoverage --sources BitOps -- "vstest.console.exe" Debug\OpsTest.dll
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v1
