--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,3 +30,5 @@ jobs:
         run: OpenCppCoverage.exe --sources BitOps -- "vstest.console.exe" x64\Debug\OpsTest.dll
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: true
