--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,4 +31,5 @@ jobs:
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
+          files: ./BitOps.xml
           fail_ci_if_error: true
